// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object widget component with clicks on each tab in root level to load all of them 1`] = `
<DocumentFragment>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-internal"
    >
      <div
        class="active title"
      >
        Internal
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content active"
      >
        <div
          aria-hidden="false"
          class="rah-static rah-static--height-auto"
          style="height: auto; overflow: visible;"
        >
          <div
            style="transition: opacity 500ms ease 0ms;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-internal_link-0-my-widget"
              >
                Internal link - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-external"
    >
      <div
        class="title"
      >
        External
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content"
      >
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0; display: none;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-external_link-0-my-widget"
              >
                External URL (can be relative within this site or absolute if it starts with http:// or https://) - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-email"
    >
      <div
        class="title"
      >
        Email
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content"
      >
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0; display: none;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-email_address-0-my-widget"
              >
                Email address - No description
              </div>
              <div
                class="mocked-default-widget"
                id="mocked-field-email_subject-1-my-widget"
              >
                Email subject (optional) - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with clicks on each tab in root level to load all of them 2`] = `
<DocumentFragment>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-internal"
    >
      <div
        class="title"
      >
        Internal
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content"
      >
        <div
          aria-hidden="true"
          class="rah-animating rah-animating--up rah-animating--to-height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-internal_link-0-my-widget"
              >
                Internal link - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-external"
    >
      <div
        class="active title"
      >
        External
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content active"
      >
        <div
          aria-hidden="true"
          class="rah-animating rah-animating--down rah-animating--to-height-auto"
          style="height: 0px; overflow: hidden; transition: height 500ms ease 0ms;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-external_link-0-my-widget"
              >
                External URL (can be relative within this site or absolute if it starts with http:// or https://) - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-email"
    >
      <div
        class="title"
      >
        Email
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content"
      >
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0; display: none;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-email_address-0-my-widget"
              >
                Email address - No description
              </div>
              <div
                class="mocked-default-widget"
                id="mocked-field-email_subject-1-my-widget"
              >
                Email subject (optional) - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with clicks on each tab in root level to load all of them 3`] = `
<DocumentFragment>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-internal"
    >
      <div
        class="title"
      >
        Internal
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content"
      >
        <div
          aria-hidden="true"
          class="rah-animating rah-animating--up rah-animating--to-height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-internal_link-0-my-widget"
              >
                Internal link - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-external"
    >
      <div
        class="title"
      >
        External
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content"
      >
        <div
          aria-hidden="true"
          class="rah-animating rah-animating--up rah-animating--to-height-zero"
          style="height: 0px; overflow: hidden; transition: height 500ms ease 0ms;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-external_link-0-my-widget"
              >
                External URL (can be relative within this site or absolute if it starts with http:// or https://) - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-email"
    >
      <div
        class="active title"
      >
        Email
        <svg
          class="icon"
          style="height: 20px; width: auto; fill: currentColor;"
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        class="content active"
      >
        <div
          aria-hidden="true"
          class="rah-animating rah-animating--down rah-animating--to-height-auto"
          style="height: 0px; overflow: hidden; transition: height 500ms ease 0ms;"
        >
          <div
            style="transition: opacity 500ms ease 0ms; opacity: 0;"
          >
            <div
              class="ui segment attached"
            >
              <div
                class="mocked-default-widget"
                id="mocked-field-email_address-0-my-widget"
              >
                Email address - No description
              </div>
              <div
                class="mocked-default-widget"
                id="mocked-field-email_subject-1-my-widget"
              >
                Email subject (optional) - No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an object widget component with invalid field in value 1`] = `
Array [
  <div
    className="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-internal"
    >
      <div
        className="active title"
        onClick={[Function]}
      >
        Internal
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "currentColor",
              "height": "20px",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        className="content active"
      >
        <div
          aria-hidden={false}
          className="rah-static rah-static--height-auto"
          style={
            Object {
              "height": "auto",
              "overflow": "visible",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitTransition": "opacity 500ms ease 0ms",
                "transition": "opacity 500ms ease 0ms",
              }
            }
          >
            <div
              className="ui segment attached"
            >
              <div
                className="mocked-default-widget"
                id="mocked-field-internal_link-0-my-widget"
              >
                Internal link
                 - 
                No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-external"
    >
      <div
        className="title"
        onClick={[Function]}
      >
        External
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "currentColor",
              "height": "20px",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        className="content"
      >
        <div
          aria-hidden={true}
          className="rah-static rah-static--height-zero"
          style={
            Object {
              "height": 0,
              "overflow": "hidden",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitTransition": "opacity 500ms ease 0ms",
                "opacity": 0,
                "transition": "opacity 500ms ease 0ms",
              }
            }
          >
            <div
              className="ui segment attached"
            >
              <div
                className="mocked-default-widget"
                id="mocked-field-external_link-0-my-widget"
              >
                External URL (can be relative within this site or absolute if it starts with http:// or https://)
                 - 
                No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="accordion ui fluid styled form"
  >
    <div
      id="blockform-fieldset-email"
    >
      <div
        className="title"
        onClick={[Function]}
      >
        Email
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "currentColor",
              "height": "20px",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </div>
      <div
        className="content"
      >
        <div
          aria-hidden={true}
          className="rah-static rah-static--height-zero"
          style={
            Object {
              "height": 0,
              "overflow": "hidden",
            }
          }
        >
          <div
            style={
              Object {
                "WebkitTransition": "opacity 500ms ease 0ms",
                "opacity": 0,
                "transition": "opacity 500ms ease 0ms",
              }
            }
          >
            <div
              className="ui segment attached"
            >
              <div
                className="mocked-default-widget"
                id="mocked-field-email_address-0-my-widget"
              >
                Email address
                 - 
                No description
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-email_subject-1-my-widget"
              >
                Email subject (optional)
                 - 
                No description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
